--- a/static/style.css
+++ b/static/style.css
@@ -8,16 +8,14 @@ body::before {
 	z-index: -1;
 
 	/* Background pattern from subtlepatterns.com */
-	background-image: url("http://subtlepatterns2015.subtlepatterns.netdna-cdn.com/patterns/congruent_pentagon.png");
-	filter: blur(3px);
-	-webkit-filter: blur(3px);
+	background-image: url("images/congruent_pentagon.png");
 }
 
 .content-area {
 	background-color : rgba(248,255,248,0.7);
 	margin: 50px;
 	padding: 0px 30px 30px 30px;
-	border: 1px solid rgba(28,20,13,0.5);
+	border: 1px solid rgba(28,20,13,0.9);
 	border-radius: 30px;
 	margin-top: 2em;
 	margin-right: auto;
@@ -31,18 +29,23 @@ body::before {
 	margin-bottom: 0.75em;
 }
 
-#meme_text {
-	border : 1px solid rgba(28,20,13,0.50);
-	resize: none;
+input[type="text"], #meme_text {
+	border: 1px solid rgba(28,20,13,0.5);
 	font-family: inherit;
 	font-size: 13pt;
 }
 
-input:focus, #meme_text:focus{
-	outline: none !important;
-	border : 1px solid rgba(28,20,13, 0.5) !important;
-	box-shadow : 0px 0px 5px 1px rgba(28,20,13,0.25) !important;
-	transition: border 0.1s, box-shadow 0.1s !important;
+input[type="text"] {
+	display: block;
+	width: 100%;
+}
+
+#meme_text {
+	resize: none;
+}
+
+input:focus, #meme_text:focus, li:focus, .tab-item:focus{
+	color: inherit;
 }
 
 .action-button {
@@ -73,13 +76,62 @@ input:focus, #meme_text:focus{
 hr {
   border: 0; 
   height: 1px; 
-  background-image: -webkit-linear-gradient(left, rgba(28,20,13,0.20), rgba(28,20,13,0.90), rgba(28,20,13,0.20));
-  background-image: -moz-linear-gradient(left, rgba(28,20,13,0.20), rgba(28,20,13,0.90), rgba(28,20,13,0.20));
-  background-image: -ms-linear-gradient(left, rgba(28,20,13,0.20), rgba(28,20,13,0.90), rgba(28,20,13,0.20));
-  background-image: -o-linear-gradient(left, rgba(28,20,13,0.20), rgba(28,20,13,0.90), rgba(28,20,13,0.20));
+  background-image: -webkit-linear-gradient(left, 
+  	rgba(28,20,13,0.20), rgba(28,20,13,0.90), rgba(28,20,13,0.20));
+  background-image: -moz-linear-gradient(left, 
+  	rgba(28,20,13,0.20), rgba(28,20,13,0.90), rgba(28,20,13,0.20));
+  background-image: -ms-linear-gradient(left, 
+  	rgba(28,20,13,0.20), rgba(28,20,13,0.90), rgba(28,20,13,0.20));
+  background-image: -o-linear-gradient(left, 
+  	rgba(28,20,13,0.20), rgba(28,20,13,0.90), rgba(28,20,13,0.20));
 }
 
 .image {
 	max-width: 100%;
 	margin-bottom: 20px;
+}
+
+/*Tabs styling*/
+.ui-tabs-nav {
+	display: table;
+	border-collapse: collapse;
+	width: 100%;
+	table-layout: fixed;
+	padding: 0px;
+	margin-bottom: 0px;
+}
+
+.ui-tabs-nav li {
+	display: table-cell;
+	text-align: center;
+	border: 1px solid rgba(28,20,13,0.8);
+	outline: none;
+	color: #1C140D;
+	font-size: 13pt;
+}
+
+.ui-tabs-anchor {
+	color: #1C140D;
+	font-size: 13pt;
+	display: block;
+}
+
+li.ui-tabs-active .ui-tabs-anchor, .ui-tabs-nav li.ui-tabs-active {
+	color : #F2E9E1;
+}
+
+.ui-tabs-anchor:hover, .ui-tabs-anchor:focus{
+	color: inherit;
+	text-decoration: none;
+	outline: none;
+}
+
+.ui-tabs-active {
+	background-color : rgba(28,20,13,1.0);
+}
+
+.ui-tabs-panel {
+	padding: 3px;
+	margin-top: 15px;
+	margin-bottom: 10px;
 }
