--- a/templates/index.html
+++ b/templates/index.html
@@ -3,21 +3,37 @@
 <head>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 	<link href="https://fonts.googleapis.com/css?family=Lato|Raleway" rel="stylesheet">
-	<link rel="stylesheet" href="{{url_for('static', filename='style.css')}}">
+	<link rel="stylesheet" href={{url_for('static', filename='style.css')}}>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
 	<div id="main-content" class="content-area">
 		<h1 id="title">Twitter Meme Maker</h1>
 
-		<div class="form-group">
-			<label for="meme_text">Meme Text</label>
-			<textarea class="form-control" rows="3" cols="35" id="meme_text"></textarea>
-		</div>
+		<div id="tabs-container">
+			<ul>
+				<li><a href="#tweet-link-tab">Link</a></li>
+				<li><a href="#text-and-image-tab">Text+Image</a></li>
+			</ul>
 
-		<div class="form-group">
-			<label for="meme_image">Meme Image</label>
-			<input type="file" accept="image/*" id="meme_image"></input>
+			<div id="tweet-link-tab">
+				<div class="form-group">
+					<label for="tweet-link">Tweet Link</label>
+					<input type="text"></input>
+				</div>
+			</div>
+
+			<div id="text-and-image-tab">
+				<div class="form-group">
+					<label for="meme_text">Meme Text</label>
+					<textarea class="form-control" rows="3" cols="35" id="meme_text"></textarea>
+				</div>
+
+				<div class="form-group">
+					<label for="meme_image">Meme Image</label>
+					<input type="file" accept="image/*" id="meme_image"></input>
+				</div>
+			</div>
 		</div>
 
 		<input class="btn btn-lg btn-block action-button" id="create_button" type="button" value='Create'>
@@ -26,8 +42,12 @@
 
 	<script type="text/javascript" src="https://code.jquery.com/jquery-3.0.0.min.js" integrity="sha256-JmvOoLtYsmqlsWxa7mDSLMwa6dZ9rrIdtrrVYRnDRH0=" crossorigin="anonymous"></script>
 
+	<script type="text/javascript" src={{url_for('static', filename='jquery-ui.min.js')}}></script>
+
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/rasterizehtml/1.2.2/rasterizeHTML.allinone.js"></script>
 
-	<script type="text/javascript" src="{{url_for('static', filename='make_meme.js')}}"></script>
+	<script type="text/javascript" src={{url_for('static', filename='make_meme.js')}}></script>
 </body>
 </html>
