--- a/static/style.css
+++ b/static/style.css
@@ -9,13 +9,14 @@ body::before {
 
 	/* Background pattern from subtlepatterns.com */
 	background-image: url("images/congruent_pentagon.png");
+	background: linear-gradient(0deg, rgb(255,124,133), rgb(245,201,160), rgb(148,220,187));
 }
 
 .content-area {
 	background-color : rgba(248,255,248,0.7);
 	margin: 50px;
-	padding: 0px 30px 30px 30px;
-	border: 1px solid rgba(28,20,13,0.9);
+	padding: 30px;
+	/*border: 1px solid rgba(28,20,13,0.9);*/
 	border-radius: 30px;
 	margin-top: 2em;
 	margin-right: auto;
@@ -27,6 +28,7 @@ body::before {
 	font-family: 'Lato', sans-serif;
 	text-align: center;
 	margin-bottom: 0.75em;
+	margin-top: 0em;
 }
 
 input[type="text"], #meme_text {
@@ -56,17 +58,22 @@ input:focus, #meme_text:focus, li:focus, .tab-item:focus{
 	color : #1C140D;
 	border: 1px solid rgba(28,20,13,0.5);
 	font-size: 14pt;
+	border-radius: 4em;
 	transition: background-color 0.2s, color 0.2s;
 }
 
 .action-button:hover {
-	background-color : rgba(28,20,13,0.90);
+	background-color : rgb(28,20,13);
 	color : #F2E9E1;
 	transition: background-color 0.2s, color 0.2s;
 }
 
 .action-button:active {
 	background-color: rgba(28,20,13,0.80);
+}
+
+.action-button:focus, .action-button:active:focus{
+	outline: none;
 }
 
 .download-content {
@@ -89,49 +96,4 @@ hr {
 .image {
 	max-width: 100%;
 	margin-bottom: 20px;
-}
-
-/*Tabs styling*/
-.ui-tabs-nav {
-	display: table;
-	border-collapse: collapse;
-	width: 100%;
-	table-layout: fixed;
-	padding: 0px;
-	margin-bottom: 0px;
-}
-
-.ui-tabs-nav li {
-	display: table-cell;
-	text-align: center;
-	border: 1px solid rgba(28,20,13,0.8);
-	outline: none;
-	color: #1C140D;
-	font-size: 13pt;
-}
-
-.ui-tabs-anchor {
-	color: #1C140D;
-	font-size: 13pt;
-	display: block;
-}
-
-li.ui-tabs-active .ui-tabs-anchor, .ui-tabs-nav li.ui-tabs-active {
-	color : #F2E9E1;
-}
-
-.ui-tabs-anchor:hover, .ui-tabs-anchor:focus{
-	color: inherit;
-	text-decoration: none;
-	outline: none;
-}
-
-.ui-tabs-active {
-	background-color : rgba(28,20,13,1.0);
-}
-
-.ui-tabs-panel {
-	padding: 3px;
-	margin-top: 15px;
-	margin-bottom: 10px;
 }
