Made footer always stick to the bottom.

--- a/templates/index.html
+++ b/templates/index.html
@@ -42,11 +42,9 @@
 	</div>
 
 
-	<footer>
-		<address>Contact: 
-			<a href="mailto:twitter.meme.maker@gmail.com">twitter.meme.maker@gmail.com</a>
-		</address>
-	</footer>
+	<div id="footer">
+		Contact: <a href="mailto:twitter.meme.maker@gmail.com">twitter.meme.maker@gmail.com</a>
+	</div>
 
 	<script type="text/javascript" src="https://code.jquery.com/jquery-3.0.0.min.js" integrity="sha256-JmvOoLtYsmqlsWxa7mDSLMwa6dZ9rrIdtrrVYRnDRH0=" crossorigin="anonymous"></script>
 
