--- a/static/style.css
+++ b/static/style.css
@@ -109,13 +109,9 @@ hr {
 	margin-bottom: 20px;
 }
 
-footer {
-	position: absolute;
+#footer {
+	position: fixed;
 	bottom: 0px;
+	right: 5px;
 	margin: 5px;
-	right: 10px;
-}
-
-address {
-	margin: 0px;
 }
