--- a/static/style.css
+++ b/static/style.css
@@ -109,9 +109,26 @@ hr {
 	margin-bottom: 20px;
 }
 
+html,
+body {
+   margin:0;
+   padding:0;
+   height:100%;
+}
+#container {
+   min-height:100%;
+   position:relative;
+}
+
+#body {
+   padding-top: 1px;
+   padding-bottom: 1.8em;
+}
 #footer {
-	position: fixed;
-	bottom: 0px;
-	right: 5px;
-	margin: 5px;
+   position: absolute;
+   bottom: 0px;
+   width: 100%;
+   height: 1.8em;
+   text-align: right;
+   padding-right: 1em;
 }
