Added my own DOM to canvas converter. Cleaned up async code w/ Promises. Now crops narrow images.

--- a/templates/index.html
+++ b/templates/index.html
@@ -52,9 +52,7 @@
 
 	<script type="text/javascript" src="https://code.jquery.com/jquery-3.0.0.min.js" integrity="sha256-JmvOoLtYsmqlsWxa7mDSLMwa6dZ9rrIdtrrVYRnDRH0=" crossorigin="anonymous"></script>
 
-	<script type="text/javascript" src={{url_for('static', filename='jquery-ui.min.js')}}></script>
-
-	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/rasterizehtml/1.2.2/rasterizeHTML.allinone.js"></script>
+	<script type="text/javascript" src={{url_for('static', filename='dom2canvas.js')}}></script>
 
 	<script type="text/javascript" src={{url_for('static', filename='make_meme.js')}}></script>
 
