Background applied to body, not body::before.

--- a/static/style.css
+++ b/static/style.css
@@ -1,12 +1,4 @@
-body::before {
-	content: "";
-	position: fixed;
-	left: 0;
-	top:0;
-	right:0;
-	bottom:0;
-	z-index: -1;
-
+body {
 	/* Background pattern from subtlepatterns.com */
 	background-size: 100% 100%;
 	background-image: url("images/gradient.png");
